--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
       <div class="header-top-wrapper">
         <div class="container">
           <div class="header-top-content">
-            <div><img src="img/email-icon.svg" alt="email">Email: Plantingservice@7oroof.com</div>
-            <div><img src="img/phone-icon.svg" alt="phone">+01 123456789</div>
-            <div><img src="img/location-icon.svg" alt="location">2072 Pinnickinick Street, WA 98370</div>
-            <div>English <img src="img/arrow down.svg" alt=""></div>
+            <div>
+              <img src="img/email-icon.svg" alt="email" />
+              <span>Email: Plantingservice@7oroof.com </span>
+            </div>
+            <div>
+              <img src="img/phone-icon.svg" alt="phone" />
+              <span>+01 123456789 </span>
+            </div>
+            <div>
+              <img src="img/location-icon.svg" alt="location" />
+              <span>2072 Pinnickinick Street, WA 98370 </span>
+            </div>
+            <div>English</div>
           </div>
         </div>
       </div>
@@ -29,21 +38,33 @@
         <div class="container">
           <div class="header-bottom-content">
             <div class="logo">
-              <img src="img/Logo.svg" alt="Logo">
+              <img src="img/Logo.svg" alt="Logo" width="90px" height="40px" />
             </div>
             <nav class="header-nav">
               <ul>
-                <li>Home</li>
-                <li>Company</li>
-                <li>Services</li>
-                <li>Project</li>
-                <li>Blog</li>
-                <li>Contact</li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Company</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Project</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
               </ul>
               <div class="header-call-us">
-                <img src="img/phone-sms-icon.svg" alt="Call us">  Call us
+                <img src="img/phone-sms-icon.svg" alt="Call us" /> Call us
               </div>
             </nav>
+            <div class="mobile-burger">
+              <img
+                src="img/phone-sms-icon-green.svg"
+                alt="call us"
+                class="mobile-contact"
+                width="40px"
+                height="34px"
+              />
+              <div class="burger-button">
+                <img src="img/burger-menu-open.svg" alt="button" />
+              </div>
+            </div>
           </div>
         </div>
       </div>
