Added a tags and button tag to header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <div class="container">
           <div class="header-bottom-content">
             <div class="logo">
+              <a href="/">
               <img src="img/Logo.svg" alt="Logo" width="90px" height="40px" />
+            </a>
             </div>
             <nav class="header-nav">
               <ul>
@@ -50,8 +52,11 @@
                 <li><a href="">Contact</a></li>
               </ul>
               <div class="header-call-us">
+                <button>
                 <img src="img/phone-sms-icon.svg" alt="Call us" /> Call us
+              </button>
               </div>
+              
             </nav>
             <div class="mobile-burger">
               <img
