finished why choose us

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                 width="40px"
                 height="34px"
               />
-              <div class="burger-button">
+              <button class="burger-button">
                 <img src="img/burger-menu-open.svg" alt="button" />
-              </div>
+              </button>
             </div>
           </div>
         </div>
@@ -346,8 +346,8 @@
             <img
               src="img/third-page-bg-flower.png"
               alt="decoration"
-              width="230px"
-              height="340px"
+              width="339px"
+              height="409px"
             />
             <div class="image-wrapper">
               <div class="green-border"></div>
@@ -367,7 +367,7 @@
               <picture class="small-img">
                 <source
                   srcset="img/third-page-small-img-l.png"
-                  media="(min-width: 1024px)"
+                  media="(min-width: 1200px)"
                 />
                 <source
                   srcset="img/third-page-small-img-l.png"
@@ -403,13 +403,13 @@
                 <div>
                   <picture>
                     <source
-                      srcset="img/thir-page-icon-1.svg"
+                      srcset="img/third-page-icon-1.svg"
                       media="(min-width: 1024px)"
                       width="67px"
                       height="67px"
                     />
                     <img
-                      src="img/thir-page-icon-1.svg"
+                      src="img/third-page-icon-1.svg"
                       alt="icon"
                       width="40px"
                       height="40px"
@@ -421,56 +421,56 @@
                 <div>
                   <picture>
                     <source
-                      srcset="img/thir-page-icon-1.svg"
+                      srcset="img/third-page-icon-2.svg"
                       media="(min-width: 1024px)"
                       width="67px"
                       height="67px"
                     />
                     <img
-                      src="img/thir-page-icon-1.svg"
+                      src="img/third-page-icon-2.svg"
                       alt="icon"
                       width="40px"
                       height="40px"
                     />
                   </picture>
 
-                  <p>Our mission</p>
+                  <p>Our Vision</p>
                 </div>
                 <div>
                   <picture>
                     <source
-                      srcset="img/thir-page-icon-1.svg"
+                      srcset="img/third-page-icon-3.svg"
                       media="(min-width: 1024px)"
                       width="67px"
                       height="67px"
                     />
                     <img
-                      src="img/thir-page-icon-1.svg"
+                      src="img/third-page-icon-3.svg"
                       alt="icon"
                       width="40px"
                       height="40px"
                     />
                   </picture>
 
-                  <p>Our mission</p>
+                  <p>Support Team</p>
                 </div>
                 <div>
                   <picture>
                     <source
-                      srcset="img/thir-page-icon-1.svg"
+                      srcset="img/third-page-icon-4.svg"
                       media="(min-width: 1024px)"
                       width="67px"
                       height="67px"
                     />
                     <img
-                      src="img/thir-page-icon-1.svg"
+                      src="img/third-page-icon-4.svg"
                       alt="icon"
                       width="40px"
                       height="40px"
                     />
                   </picture>
 
-                  <p>Our mission</p>
+                  <p>Clients Trust</p>
                 </div>
               </div>
               <a>Discover more</a>
@@ -478,6 +478,132 @@
           </div>
         </div>
       </section>
+      <section class="why-choose-us">
+        <div class="container">
+          <div class="why-choose-us-content">
+            <picture class="bg-flower-left">
+              <source
+                srcset="img/why-choose-us-bg-left.png"
+                media="(min-width: 1024px)"
+              />
+              <img src="img/why-choose-us-bg-left-xs.png" alt="" />
+            </picture>
+            <picture class="bg-flower-right">
+              <source
+                srcset="img/why-choose-us-bg-right.png"
+                media="(min-width: 1024px)"
+              />
+              <img src="img/why-choose-us-bg-right-xs.png" alt="" />
+            </picture>
+            <div class="img-wrapper">
+              <picture>
+                <source
+                  srcset="img/why-choose-us-img-l.png"
+                  media="(min-width: 1024px)"
+                />
+                <img src="img/why-choose-us-img.png" alt="" />
+              </picture>
+            </div>
+            <div class="text-wrapper">
+              <h3>Why Choose Us</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book.
+              </p>
+              <ul class="icons-wrapper">
+                <li><span>Proper Take Care</span></li>
+                <li><span>Proper Take Care</span></li>
+                <li><span>Proper Take Care</span></li>
+                <li><span>Proper Take Care</span></li>
+              </ul>
+              <a href="">Discover more</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <div class="mobile-burger-wrapper">
+      <div class="mobile-burger-content">
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li>
+              <span class="clicked">Company</span>
+              <nav class="accordeon">
+                <ul>
+                  <li><a href="">About Us</a></li>
+                  <li><a href="">Thank you</a></li>
+                  <li><a href="">Terms & Conditions</a></li>
+                  <li><a href="">Privacy Policy</a></li>
+                  <li><a href="">Site Map</a></li>
+                  <li><a href="">Disclaimer</a></li>
+                  <li><a href="">404 Error</a></li>
+                </ul>
+              </nav>
+            </li>
+            <li>
+              <span class="clicked">Services</span>
+              <nav  class="accordeon">
+                <ul>
+                  <li><a href="">About Us</a></li>
+                  <li><a href="">Thank you</a></li>
+                  <li><a href="">Terms & Conditions</a></li>
+                  <li><a href="">Privacy Policy</a></li>
+                  <li><a href="">Site Map</a></li>
+                  <li><a href="">Disclaimer</a></li>
+                  <li><a href="">404 Error</a></li>
+                </ul>
+              </nav>
+            </li>
+            <li>
+              <span class="clicked">Projects</span>
+              <nav  class="accordeon">
+                <ul>
+                  <li><a href="">About Us</a></li>
+                  <li><a href="">Thank you</a></li>
+                  <li><a href="">Terms & Conditions</a></li>
+                  <li><a href="">Privacy Policy</a></li>
+                  <li><a href="">Site Map</a></li>
+                  <li><a href="">Disclaimer</a></li>
+                  <li><a href="">404 Error</a></li>
+                </ul>
+              </nav>
+            </li>
+            <li>
+              <span class="clicked">Blog</span>
+              <nav  class="accordeon">
+                <ul>
+                  <li><a href="">About Us</a></li>
+                  <li><a href="">Thank you</a></li>
+                  <li><a href="">Terms & Conditions</a></li>
+                  <li><a href="">Privacy Policy</a></li>
+                  <li><a href="">Site Map</a></li>
+                  <li><a href="">Disclaimer</a></li>
+                  <li><a href="">404 Error</a></li>
+                </ul>
+              </nav>
+            </li>
+            <li>
+              <a href="">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="burger-footer">
+          <div class="icons">
+            <img src="img/facebook-icon.svg" alt="" />
+            <img src="img/linkedin-icon.svg" alt="" />
+            <img src="img/google-icon.svg" alt="" />
+            <img src="img/twitter-icon.svg" alt="" />
+          </div>
+          <p>
+            © Copyright Plant Store 2021-22. All right reserved. Design by
+            Themadbrains
+          </p>
+        </div>
+      </div>
+    </div>
+    <script src="app.js"></script>
   </body>
 </html>
