Finished mobile burger

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 width="40px"
                 height="34px"
               />
-              <button class="burger-button">
+              <button class="burger-button" id="burgerBtn">
                 <img src="img/burger-menu-open.svg" alt="button" />
               </button>
             </div>
@@ -524,7 +524,7 @@
         </div>
       </section>
     </main>
-    <div class="mobile-burger-wrapper">
+    <div class="mobile-burger-wrapper" id="burger-menu-wrapper">
       <div class="mobile-burger-content">
         <nav>
           <ul>
