working-process section

--- a/index.html
+++ b/index.html
@@ -523,6 +523,71 @@
           </div>
         </div>
       </section>
+      <section class="working-process">
+        <div class="container">
+          <div class="working-process-content">
+        <h2>Working <span>Process</span></h2>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took of type and scrambled it
+          to make a type specimen book.
+        </p>
+        <ul class="items-wrapper">
+          <li class="item">
+            <div class="top-content">
+              <img src="img/working-process-icon-1-green.svg" alt="" />
+              <div>1</div>
+            </div>
+            <h3>Consultation</h3>
+            <p>
+              Lorem Ipsum is simply dummy of the printing and typesetting test
+              industry. Lorem Ipsum has been the industry's standard.
+            </p>
+          </li>
+          <li class="item">
+            <div class="top-content">
+              <img src="img/working-process-icon-1-green.svg" alt="" />
+              <div>1</div>
+            </div>
+            <h3>Consultation</h3>
+            <p>
+              Lorem Ipsum is simply dummy of the printing and typesetting test
+              industry. Lorem Ipsum has been the industry's standard.
+            </p>
+          </li>
+          <li class="item">
+            <div class="top-content">
+              <img src="img/working-process-icon-1-green.svg" alt="" />
+              <div>1</div>
+            </div>
+            <h3>Consultation</h3>
+            <p>
+              Lorem Ipsum is simply dummy of the printing and typesetting test
+              industry. Lorem Ipsum has been the industry's standard.
+            </p>
+          </li>
+          <li class="item">
+            <div class="top-content">
+              <img src="img/working-process-icon-1-green.svg" alt="" />
+              <div>1</div>
+            </div>
+            <h3>Consultation</h3>
+            <p>
+              Lorem Ipsum is simply dummy of the printing and typesetting test
+              industry. Lorem Ipsum has been the industry's standard.
+            </p>
+          </li>
+        </ul>
+        <footer>
+          <p>Our Best Reliable Gardening <br>
+            and Lawn services
+            </p>
+          <button><span>Call us</span></button>
+        </footer>
+      </div>
+    </div>
+      </section>
     </main>
     <div class="mobile-burger-wrapper" id="burger-menu-wrapper">
       <div class="mobile-burger-content">
@@ -545,7 +610,7 @@
             </li>
             <li>
               <span class="clicked">Services</span>
-              <nav  class="accordeon">
+              <nav class="accordeon">
                 <ul>
                   <li><a href="">About Us</a></li>
                   <li><a href="">Thank you</a></li>
@@ -559,7 +624,7 @@
             </li>
             <li>
               <span class="clicked">Projects</span>
-              <nav  class="accordeon">
+              <nav class="accordeon">
                 <ul>
                   <li><a href="">About Us</a></li>
                   <li><a href="">Thank you</a></li>
@@ -573,7 +638,7 @@
             </li>
             <li>
               <span class="clicked">Blog</span>
-              <nav  class="accordeon">
+              <nav class="accordeon">
                 <ul>
                   <li><a href="">About Us</a></li>
                   <li><a href="">Thank you</a></li>
