staff section with slider

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </head>
   <body>
     <header class="header">
@@ -526,67 +532,174 @@
       <section class="working-process">
         <div class="container">
           <div class="working-process-content">
-        <h2>Working <span>Process</span></h2>
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took of type and scrambled it
-          to make a type specimen book.
-        </p>
-        <ul class="items-wrapper">
-          <li class="item">
-            <div class="top-content">
-              <img src="img/working-process-icon-1-green.svg" alt="" />
-              <div>1</div>
-            </div>
-            <h3>Consultation</h3>
+            <h2>Working <span>Process</span></h2>
             <p>
-              Lorem Ipsum is simply dummy of the printing and typesetting test
-              industry. Lorem Ipsum has been the industry's standard.
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took of type and
+              scrambled it to make a type specimen book.
             </p>
-          </li>
-          <li class="item">
-            <div class="top-content">
-              <img src="img/working-process-icon-1-green.svg" alt="" />
-              <div>1</div>
+            <ul class="items-wrapper">
+              <li class="item">
+                <div class="top-content">
+                  <img src="img/working-process-icon-1-green.svg" alt="" />
+                  <div>1</div>
+                </div>
+                <h3>Consultation</h3>
+                <p>
+                  Lorem Ipsum is simply dummy of the printing and typesetting
+                  test industry. Lorem Ipsum has been the industry's standard.
+                </p>
+              </li>
+              <li class="item">
+                <div class="top-content">
+                  <img src="img/working-process-icon-1-green.svg" alt="" />
+                  <div>1</div>
+                </div>
+                <h3>Consultation</h3>
+                <p>
+                  Lorem Ipsum is simply dummy of the printing and typesetting
+                  test industry. Lorem Ipsum has been the industry's standard.
+                </p>
+              </li>
+              <li class="item">
+                <div class="top-content">
+                  <img src="img/working-process-icon-1-green.svg" alt="" />
+                  <div>1</div>
+                </div>
+                <h3>Consultation</h3>
+                <p>
+                  Lorem Ipsum is simply dummy of the printing and typesetting
+                  test industry. Lorem Ipsum has been the industry's standard.
+                </p>
+              </li>
+              <li class="item">
+                <div class="top-content">
+                  <img src="img/working-process-icon-1-green.svg" alt="" />
+                  <div>1</div>
+                </div>
+                <h3>Consultation</h3>
+                <p>
+                  Lorem Ipsum is simply dummy of the printing and typesetting
+                  test industry. Lorem Ipsum has been the industry's standard.
+                </p>
+              </li>
+            </ul>
+            <footer>
+              <p>
+                Our Best Reliable Gardening <br />
+                and Lawn services
+              </p>
+              <button><span>Call us</span></button>
+            </footer>
+          </div>
+        </div>
+      </section>
+      <section class="staff">
+        <div class="container">
+          <div class="staff-content">
+            <h2>Our <span>Trained Staff</span></h2>
+            <div class="text-wrapper">
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown of type and scrambled
+                it to make a type specimen book.
+              </p>
+              <button>Discover More</button>
             </div>
-            <h3>Consultation</h3>
-            <p>
-              Lorem Ipsum is simply dummy of the printing and typesetting test
-              industry. Lorem Ipsum has been the industry's standard.
-            </p>
-          </li>
-          <li class="item">
-            <div class="top-content">
-              <img src="img/working-process-icon-1-green.svg" alt="" />
-              <div>1</div>
+            <div class="slider-wrapper">
+              <div class="slider-line">
+                <div class="slide">
+                  <span class="worker-info-open-close" data-index="1"></span>
+                  <div
+                    class="translate worker-1"
+                  >
+                    <div class="text-wrapper">
+                      <h4>
+                        Doris Jordan
+                        <span>Design Expert</span>
+                      </h4>
+                      <div class="worker-social-links">
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                      </div>
+                    </div>
+                  </div>
+                  <img src="img/staff-slide-img-1.png" alt="Doris Jordan" />
+                </div>
+                <div class="slide">
+                  <span class="worker-info-open-close" data-index="2"></span>
+                  <div
+                    class="translate worker-2"
+                  >
+                    <div class="text-wrapper">
+                      <h4>
+                        Doris Jordan
+                        <span>Design Expert</span>
+                      </h4>
+                      <div class="worker-social-links">
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                      </div>
+                    </div>
+                  </div>
+                  <img src="img/staff-slide-img-1.png" alt="Doris Jordan" />
+                </div>
+                <div class="slide">
+                  <span class="worker-info-open-close" data-index="3"></span>
+                  <div
+                    class="translate worker-3"
+                  >
+                    <div class="text-wrapper">
+                      <h4>
+                        Doris Jordan
+                        <span>Design Expert</span>
+                      </h4>
+                      <div class="worker-social-links">
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                      </div>
+                    </div>
+                  </div>
+                  <img src="img/staff-slide-img-1.png" alt="Doris Jordan" />
+                </div>
+                <div class="slide">
+                  <span class="worker-info-open-close" data-index="4"></span>
+                  <div
+                    class="translate worker-4"
+                  >
+                    <div class="text-wrapper">
+                      <h4>
+                        Doris Jordan
+                        <span>Design Expert</span>
+                      </h4>
+                      <div class="worker-social-links">
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                        <div class="item google"><a href="#"></a></div>
+                      </div>
+                    </div>
+                  </div>
+                  <img src="img/staff-slide-img-1.png" alt="Doris Jordan" />
+                </div>
+              </div>
+              
             </div>
-            <h3>Consultation</h3>
-            <p>
-              Lorem Ipsum is simply dummy of the printing and typesetting test
-              industry. Lorem Ipsum has been the industry's standard.
-            </p>
-          </li>
-          <li class="item">
-            <div class="top-content">
-              <img src="img/working-process-icon-1-green.svg" alt="" />
-              <div>1</div>
-            </div>
-            <h3>Consultation</h3>
-            <p>
-              Lorem Ipsum is simply dummy of the printing and typesetting test
-              industry. Lorem Ipsum has been the industry's standard.
-            </p>
-          </li>
-        </ul>
-        <footer>
-          <p>Our Best Reliable Gardening <br>
-            and Lawn services
-            </p>
-          <button><span>Call us</span></button>
-        </footer>
-      </div>
-    </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
       </section>
     </main>
     <div class="mobile-burger-wrapper" id="burger-menu-wrapper">
