why-schoose-us section

--- a/index.html
+++ b/index.html
@@ -612,9 +612,7 @@
               <div class="slider-line">
                 <div class="slide">
                   <span class="worker-info-open-close" data-index="1"></span>
-                  <div
-                    class="translate worker-1"
-                  >
+                  <div class="translate worker-1">
                     <div class="text-wrapper">
                       <h4>
                         Doris Jordan
@@ -633,9 +631,7 @@
                 </div>
                 <div class="slide">
                   <span class="worker-info-open-close" data-index="2"></span>
-                  <div
-                    class="translate worker-2"
-                  >
+                  <div class="translate worker-2">
                     <div class="text-wrapper">
                       <h4>
                         Doris Jordan
@@ -654,9 +650,7 @@
                 </div>
                 <div class="slide">
                   <span class="worker-info-open-close" data-index="3"></span>
-                  <div
-                    class="translate worker-3"
-                  >
+                  <div class="translate worker-3">
                     <div class="text-wrapper">
                       <h4>
                         Doris Jordan
@@ -675,9 +669,7 @@
                 </div>
                 <div class="slide">
                   <span class="worker-info-open-close" data-index="4"></span>
-                  <div
-                    class="translate worker-4"
-                  >
+                  <div class="translate worker-4">
                     <div class="text-wrapper">
                       <h4>
                         Doris Jordan
@@ -695,9 +687,62 @@
                   <img src="img/staff-slide-img-1.png" alt="Doris Jordan" />
                 </div>
               </div>
-              
             </div>
             <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+      <section class="testimonials">
+        <div class="container">
+          <div class="testimonials-content">
+            <div class="top-content">
+              <h2>What <span>Clients Saying</span></h2>
+              <div>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the text industry's
+                  standard dummy text ever since the 1500s, when an unknown of
+                  type and scrambled it to make a type specimen book.
+                </p>
+                <div class="pagination"></div>
+              </div>
+            </div>
+            <div class="slider-wrapper">
+              <div class="slider-line">
+                <div class="slide">
+                  <div class="img-wrapper">
+                    <div class="img">
+                    <picture>
+                      <source
+                        media="(min-width: 1024px)"
+                        srcset="img/testimonials-img-1-l.png"
+                        width="193"
+                      />
+                      <img src="img/testimonials-img-1.png" alt="" />
+                    </picture>
+                    <div class="background"></div>
+                  </div>
+                   
+                  </div>
+                  <div class="text">
+                    <p>Lorem Ipsum is simply dummy text of the printig and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took text of type and scrambled it to make.</p>
+                    <div>
+                      <div class="client-name">
+                        Jane Smith <br>
+                        <span>Manager</span>
+                      </div>
+                      <div class="stars">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
