artickles section and photos line section

--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-pagination"></div>
+            <div class="workers-swiper-pagination swiper-pagination"></div>
           </div>
         </div>
       </section>
@@ -900,6 +900,177 @@
           </div>
         </div>
       </section>
+      <section class="artickles">
+        <div class="container">
+          <div class="artickles-content">
+            <h2>Our
+              <span> Insights & Articles</span>
+            </h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknow printer took of type and scrambled it to make a type specimen book.</p>
+            <div class="artickles-slider swiper">
+              <div class="artickles-slider-wrapper swiper-wrapper">
+                <div class="artickles-slide swiper-slide">
+                  <h3>Planting</h3>
+                  <h4>Ask The Agronomists: Lawncare
+                    Tips From The Experts			</h4>
+                  <p>Lorem ipsum dolor sit amet, the is consectetuer lorema dipiscing elit. Aenean commodo of ligula eget the dolor. Aenean massa. Cum ot the sociis natoque.
+                    Lorem ipsum of lorema dolor sit amet, consectetuer loremadipiscing dolor elit. Aenean commodo ligula eget the dolor. Aenean massa. Cum sociis natoque...</p>
+                  <div class="slide-footer">
+                    <div class="date">Sep 6 -2021</div>
+                    <div class="creator">Admin</div>
+                  </div>
+                </div>
+                <div class="artickles-slide swiper-slide background-image">
+                  <h3>Planting</h3>
+                  <h4>Ask The Agronomists: Lawncare
+                    Tips From The Experts			</h4>
+                  <p>Lorem ipsum dolor sit amet, the is consectetuer lorema dipiscing elit. Aenean commodo of ligula eget the dolor. Aenean massa. Cum ot the sociis natoque.
+                    Lorem ipsum of lorema dolor sit amet, consectetuer loremadipiscing dolor elit. Aenean commodo ligula eget the dolor. Aenean massa. Cum sociis natoque...</p>
+                  <div class="slide-footer">
+                    <div class="date">Sep 6 -2021</div>
+                    <div class="creator">Admin</div>
+                  </div>
+                </div>
+                <div class="artickles-slide swiper-slide">
+                  <h3>Planting</h3>
+                  <h4>Ask The Agronomists: Lawncare
+                    Tips From The Experts			</h4>
+                  <p>Lorem ipsum dolor sit amet, the is consectetuer lorema dipiscing elit. Aenean commodo of ligula eget the dolor. Aenean massa. Cum ot the sociis natoque.
+                    Lorem ipsum of lorema dolor sit amet, consectetuer loremadipiscing dolor elit. Aenean commodo ligula eget the dolor. Aenean massa. Cum sociis natoque...</p>
+                  <div class="slide-footer">
+                    <div class="date">Sep 6 -2021</div>
+                    <div class="creator">Admin</div>
+                  </div>
+                </div>
+                <div class="artickles-slide swiper-slide background-image">
+                  <h3>Planting</h3>
+                  <h4>Ask The Agronomists: Lawncare
+                    Tips From The Experts			</h4>
+                  <p>Lorem ipsum dolor sit amet, the is consectetuer lorema dipiscing elit. Aenean commodo of ligula eget the dolor. Aenean massa. Cum ot the sociis natoque.
+                    Lorem ipsum of lorema dolor sit amet, consectetuer loremadipiscing dolor elit. Aenean commodo ligula eget the dolor. Aenean massa. Cum sociis natoque...</p>
+                  <div class="slide-footer">
+                    <div class="date">Sep 6 -2021</div>
+                    <div class="creator">Admin</div>
+                  </div>
+                </div>
+                <div class="artickles-slide swiper-slide">
+                  <h3>Planting</h3>
+                  <h4>Ask The Agronomists: Lawncare
+                    Tips From The Experts			</h4>
+                  <p>Lorem ipsum dolor sit amet, the is consectetuer lorema dipiscing elit. Aenean commodo of ligula eget the dolor. Aenean massa. Cum ot the sociis natoque.
+                    Lorem ipsum of lorema dolor sit amet, consectetuer loremadipiscing dolor elit. Aenean commodo ligula eget the dolor. Aenean massa. Cum sociis natoque...</p>
+                  <div class="slide-footer">
+                    <div class="date">Sep 6 -2021</div>
+                    <div class="creator">Admin</div>
+                  </div>
+                </div>
+                <div class="artickles-slide swiper-slide background-image">
+                  <h3>Planting</h3>
+                  <h4>Ask The Agronomists: Lawncare
+                    Tips From The Experts			</h4>
+                  <p>Lorem ipsum dolor sit amet, the is consectetuer lorema dipiscing elit. Aenean commodo of ligula eget the dolor. Aenean massa. Cum ot the sociis natoque.
+                    Lorem ipsum of lorema dolor sit amet, consectetuer loremadipiscing dolor elit. Aenean commodo ligula eget the dolor. Aenean massa. Cum sociis natoque...</p>
+                  <div class="slide-footer">
+                    <div class="date">Sep 6 -2021</div>
+                    <div class="creator">Admin</div>
+                  </div>
+                </div>
+                <div class="artickles-slide swiper-slide">
+                  <h3>Planting</h3>
+                  <h4>Ask The Agronomists: Lawncare
+                    Tips From The Experts			</h4>
+                  <p>Lorem ipsum dolor sit amet, the is consectetuer lorema dipiscing elit. Aenean commodo of ligula eget the dolor. Aenean massa. Cum ot the sociis natoque.
+                    Lorem ipsum of lorema dolor sit amet, consectetuer loremadipiscing dolor elit. Aenean commodo ligula eget the dolor. Aenean massa. Cum sociis natoque...</p>
+                  <div class="slide-footer">
+                    <div class="date">Sep 6 -2021</div>
+                    <div class="creator">Admin</div>
+                  </div>
+                </div>
+                <div class="artickles-slide swiper-slide background-image">
+                  <h3>Planting</h3>
+                  <h4>Ask The Agronomists: Lawncare
+                    Tips From The Experts			</h4>
+                  <p>Lorem ipsum dolor sit amet, the is consectetuer lorema dipiscing elit. Aenean commodo of ligula eget the dolor. Aenean massa. Cum ot the sociis natoque.
+                    Lorem ipsum of lorema dolor sit amet, consectetuer loremadipiscing dolor elit. Aenean commodo ligula eget the dolor. Aenean massa. Cum sociis natoque...</p>
+                  <div class="slide-footer">
+                    <div class="date">Sep 6 -2021</div>
+                    <div class="creator">Admin</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slider-pagination swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+      <div class="photos-line">
+<div class="container">
+  <div class="photos-line-content">
+    <div class="photos-line-slider swiper">
+      <div class="photos-line-wrapper swiper-wrapper">
+        <div class="photos-line-slide swiper-slide swiper-no-swiping">
+          <img 
+          srcset="img/photos-line-img-1.png 200w"
+          src="img/photos-line-img-1.png" 
+          alt=""
+          sizes="(min-width: 1600px) 200px,
+          (min-width: 250px), 140px">
+        </div>
+        <div class="photos-line-slide swiper-slide swiper-no-swiping">
+          <img 
+          srcset="img/photos-line-img-2.png 200w"
+          src="img/photos-line-img-2.png" 
+          alt=""
+          sizes="(min-width: 1600px) 200px,
+          (min-width: 250px), 140px">
+        </div>
+        <div class="photos-line-slide swiper-slide swiper-no-swiping">
+          <img 
+          srcset="img/photos-line-img-3.png 200w"
+          src="img/photos-line-img-3.png" 
+          alt=""
+          sizes="(min-width: 1600px) 200px,
+          (min-width: 250px), 140px">
+        </div>
+        <div class="photos-line-slide swiper-slide swiper-no-swiping">
+          <img 
+          srcset="img/photos-line-img-1.png 200w"
+          src="img/photos-line-img-1.png" 
+          alt=""
+          sizes="(min-width: 1600px) 200px,
+          (min-width: 250px), 140px">
+        </div>
+        <div class="photos-line-slide swiper-slide swiper-no-swiping">
+          <img 
+          srcset="img/photos-line-img-2.png 200w"
+          src="img/photos-line-img-2.png" 
+          alt=""
+          sizes="(min-width: 1600px) 200px,
+          (min-width: 250px), 140px">
+        </div>
+        <div class="photos-line-slide swiper-slide swiper-no-swiping">
+          <img 
+          srcset="img/photos-line-img-3.png 200w"
+          src="img/photos-line-img-3.png" 
+          alt=""
+          sizes="(min-width: 1600px) 200px,
+          (min-width: 250px), 140px">
+        </div>
+       
+      </div>
+    </div>
+    <div class="photos-line-text">
+      <p>
+        We Have 
+        <span>Solutions</span>
+        For Your
+        <span>Garden.</span>
+      </p>
+      <button>Get A Quate</button>
+    </div>
+  </div>
+</div>
+      </div>
     </main>
     <div class="mobile-burger-wrapper" id="burger-menu-wrapper">
       <div class="mobile-burger-content">
